# nlp-sentiment-analysis

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
docs/: API.md
notebooks/: module-testing.ipynb  nlp-sentiment-analysis.ipynb
src/: config.py  formatting.py  get_dataset.py  main.py  train.py
